[package]
name = "netmap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dot-writer = "0.1.3"
eui48 = { version = "1.1.0", features = ["disp_hexstring", "serde"] }
flexi_logger = "0.24.2"
log = "0.4.17"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.38"
